--- a/scss/all.css
+++ b/scss/all.css
@@ -207,13 +207,13 @@ a {
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .font-bannerTitle {
   font-size: 48px;
   font-weight: bold;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   line-height: 70px;
 }
 
@@ -235,10 +235,8 @@ a {
 
 @media (max-width: 768px) {
   .header {
-    height: 110vh;
-    background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/f70f00178a7f0baa31e9c01634303d8562cfe93a/chatTalker_images/bg_home_sm.svg");
-    background-size: 90%;
-    background-position: center bottom;
+    background-image: none;
+    height: 130vh;
   }
   .blueBall {
     background-image: none;
@@ -253,9 +251,15 @@ a {
         -ms-flex-align: start;
             align-items: flex-start;
     margin-top: 36px;
+    height: 70vh;
   }
   .banner img {
     width: 100%;
+    background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/f70f00178a7f0baa31e9c01634303d8562cfe93a/chatTalker_images/bg_home_sm.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    margin-top: 24px;
   }
 }
 
